# Reattach

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.local.mk.sample  install-hooks.sh  install.sh
.github/workflows/: release.yml
docs/: CNAME  cloudflare.html  index.html  privacy.html  setup.html
docs/ja/: cloudflare.html  index.html  privacy.html  setup.html
fastlane/: Appfile  Fastfile  README.md  changelog.txt  report.xml
fastlane/metadata/: copyright.txt
fastlane/metadata/en-US/: description.txt  name.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
fastlane/metadata/ja/: description.txt  keywords.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt  support_url.txt
fastlane/metadata/review_information/: notes.txt
hooks/: idle-notification.json  install-hooks.sh  notify.sh
ios/Reattach/: Config.xcconfig.sample  ContentView.swift  Info.plist  ReattachApp.swift  StoreKitConfiguration.storekit
ios/Reattach.xcodeproj/: project.pbxproj
ios/Reattach/Helpers/: GlassButton.swift
ios/ReattachTests/: ReattachTests.swift
ios/ReattachUITests/: ReattachUITests.swift  ReattachUITestsLaunchTests.swift
ios/ci_scripts/: ci_post_clone.sh
launchd/: com.kumabook.cloudflared-reattach.plist  com.kumabook.reattachd.plist
reattachd/: Cargo.toml  build.rs
reattachd/src/: apns.rs  auth.rs  main.rs
reattachd/src/api/: input.rs  mod.rs  notifications.rs  output.rs  panes.rs  register.rs  sessions.rs
reattachd/src/tmux/: capture.rs  create.rs  kill.rs  list.rs  mod.rs  send.rs
(+18 files in other folders)
